[package]
name = "poker"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1.0.219"
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio", "macros"] }
actix-web = "4.11.0"
maud = { version = "0.27.0", features = ["actix-web"] }
tokio = { version = "1.45.0", features = ["full"] }
rand = "0.9.1"
